# TMAT3004-Bacheloroppgave

./: .gitattributes  .gitignore  Makefile  README.md  check.py  cnn.py  data.dvc  inference.py  outoutRetinaNet  train.py  trainStreamOutput  yololabelconverter.awk
.dvc/: config
app/: CMakeLists.txt  datasettool.cpp  main.cpp  yolo.cpp
app/data/images/: opencv-1-cpp
app/data/video/: syntetisk_torsk.mkv  syntetisk_torsk_old.mkv
models/: .gitignore  cat_dog_panda_classifier.pt.dvc  torsk_sei_classifier.pt.dvc
notebooks/: Assignment-CNN-CIFAR10.ipynb  Custom_Dataloader.ipynb  Project2_Kaggle_Competition_Classification.ipynb  RetinaNet_object_detection.ipynb  Training_from_scratch.ipynb
presentation/: main.tex
report/: Forsidemal2020.docx  Makefile  abstract.tex  main.synctex(busy)  main.tex  mybib.bib  structure.tex  thanks.tex  titlepage.tex
report/sections/: abbreviations.tex  abstract.tex  analysis.tex  appendix_azure.tex  appendix_code.tex  appendix_ssh.tex  discussion.tex  end.tex  introduction.tex  method.tex  theory.aux  theory.tex  theory.tex.aux
report/whitepapers/: What I learned from competing against a ConvNet on ImageNet.html
report/whitepapers/What I learned from competing against a ConvNet on ImageNet_files/: 501709.html  embed.js.download  main(1).css  main.js.download  pixel.html  saved_resource(1).html  saved_resource(3).html  saved_resource.html  sdk.js.download
